[package]
name = "rama-elite-proxy"
version = "1.0.0"
edition = "2021"
rust-version = "1.91"
authors = ["Elite Proxy Team"]
description = "Elite Anonymous Reverse Proxy with advanced stealth and fingerprint evasion"
license = "MIT"

[dependencies]
# Rama framework - 0.3.0-alpha.4 (2026) - rustls only (no cmake needed)
rama = { version = "0.3.0-alpha.4", features = [
    "http-full",
    "tcp",
    "rustls",
    "compression",
] }

# Async runtime
tokio = { version = "1.42", features = ["full", "tracing"] }
tokio-util = { version = "0.7", features = ["full"] }

# HTTP (versions from Rama ecosystem)
hyper = { version = "1.5", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http = "1.1"
http-body-util = "0.1"
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["full"] }

# TLS & Crypto (Rustls - pure Rust)
rustls = { version = "0.23", features = ["ring", "std"] }
rustls-pemfile = "2.2"
tokio-rustls = "0.26"
rcgen = "0.13"
time = { version = "0.3", features = ["formatting", "macros"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"

# Authentication & Security
jsonwebtoken = "10.3"
argon2 = { version = "0.5", features = ["std"] }
sha1 = "0.10"
sha2 = "0.10"
hmac = "0.12"
base64 = "0.22"
hex = "0.4"
rand = "0.8"
uuid = { version = "1.11", features = ["v4", "serde"] }

# Database
sled = "0.34"

# Tracing & Logging (aligned with Rama OTLP support)
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
urlencoding = "2.1"
tracing-appender = "0.2"
indexmap = { version = "2.6", features = ["serde"] }
rand_distr = "0.4"
trust-dns-resolver = "0.23"
reqwest = { version = "0.12", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"

# Metrics
prometheus = "0.14"

# Configuration
config = "0.15"
clap = { version = "4.5", features = ["derive", "env"] }
dotenvy = "0.15"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Rate limiting
governor = "0.10"
nonzero_ext = "0.3"

# Regex & Parsing
regex = "1.11"
url = "2.5"
mime = "0.3"
mime_guess = "2.0"

# Utilities (aligned with Rama utils)
futures = "0.3"
pin-project = "1.1"
bytes = "1.9"
once_cell = "1.20"
parking_lot = "0.12"
dashmap = "6.1"
ahash = "0.8"

# User agent generation
fake-useragent = "0.1"

[dev-dependencies]
criterion = "0.5"
mockito = "1.5"
proptest = "1.5"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 0

[profile.bench]
inherits = "release"
